Second practice results

--- a/Properties/Resources.ru-Ru.resx
+++ b/Properties/Resources.ru-Ru.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Exception_ZeroDivision" xml:space="preserve">
-    <value>Forbidden operation. Trying to divide by zero.</value>
+    <value>Заборонена операція. Спроба ділення на нуль.</value>
   </data>
 </root>
